<resources>
    <string name="app_name">ứng Dụng Đặt Lịch Cắt Tóc</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="thongtin">THÔNG TIN TÀI KHOẢN</string>
    <string name="register_now"><u>Đăng kí</u> </string>

    <string name="register_successfully">Đăng Ký Tài Khoản Thành Công</string>
    <string name="not_a_member">Bạn chưa có tài khoản ?</string>
    <string name="forgot_password"><u>Quên mật khẩu</u></string>
    >

    <string name="txtchinhsua"><u>CHỈNH SỬA THÔNG TIN</u> </string>
    <string name="txtxemchitiet"><u>Xem chi tiết   </u> </string>
    <string name="txtname">Bùi Phương Nam</string>
    <string name="txtlogin"><u>Đăng nhập </u></string>

    <string name="titlehistory">ANH CHƯA CÓ LỊCH SỬ DÙNG DỊCH VỤ</string>
    <string name="contenthistory">Anh đặt lịch ngay để trải nghiệm dịch vụ của chúng em nhé!</string>
    <string name="textbtnthistory">ĐẶT LỊCH NGAY</string>
    <string name="txtluuthongtin"><u>LƯU THÔNG TIN</u></string>


    <string name="login">LOGIN</string>
    <string name="registration_failed">Registration failed</string>
    <string name="repeat_password">Repeat password</string>

    <!--    KHAM PHA    -->
    <string name="txtdiscover">DISCOVER</string>
    <string name="KHAMPHA_txtChinhSachBaoMat">Chính Sách Bảo Mật Thông Tin App Hair Salon</string>
    <!---->
    <!-- DIEU KIEN GIAO DICH CHUNG-->
    <string name="GDC_Title">Điều kiện giao dịch chung</string>
    <string name="GDC_Title2">Điều Kiện Giao Dịch Chung Trên App HAIR SALON</string>
    <string name="GDC_txtTitle1">I. Thông tin về điều kiện giao dịch chung</string>
    <string name="GDCTitle1_contentPart1">1. Khách hàng của app hair salon là các cá nhân , tổ chức không giới hạn giới tính hay phạm vi địa lý, có nhu cầu sử dụng dịch vụ của hair salon.</string>
    <string name="GDCTitle1_txtPart2">2. Chính sách chỉnh sửa kiểu tóc :</string>
    <string name="GDCTitle1_contentPart21">- Nếu khách hàng chưa hài lòng về kiểu tóc mà nhân viên salon đã cắt thì khách hàng có quyền yêu cầu chỉnh sửa trong vòng 07 ngày kể từ ngày cắt , đối với tóc uốn , nhuộm là 15 ngày.</string>
    <string name="GDCTitle1_contentPart22">Khách hàng đặt lịch sử dụng dịch vụ bình thường và báo sửa tóc với lễ tân.</string>
    <string name="GDCTitle1_contentPart23">Địa điểm sửa tóc: Tại quán Hair Salon.</string>
    <string name="GDCTitle1_txtPart3">3. Nghĩa vụ của Hair Salon và nghĩa vụ của khách hàng trong mỗi giao dịch</string>
    <string name="GDCTitle1_contentPart31">Nghĩa vụ của Hair Salon:</string>
    <string name="GDCTitle1_contentPart32">- Đảm bảo cung cấp dịch vụ đúng thời gian khách hàng yêu cầu (khách hàng đã đặt lịch ).</string>
    <string name="GDCTitle1_contentPart33">Nghĩa vụ của khách hàng:</string>
    <string name="GDCTitle1_contentPart34">- Có mặt tại salon đúng thời gian đã đặt lịch để sử dụng dịch vụ.</string>
    <string name="GDCTitle1_contentPart35">- Mọi hành vi phá hoại như spam sẽ bị xóa tài khoản vĩnh viễn mà không báo trước.</string>
    <string name="GDCTitle1_txtPart4">4. Phương thức thanh toán:</string>
    <string name="GDCTitle1_contentPart4.1">- Khách hàng thanh toán bằng hình thức trả tiền mặt khi sử dụng xong dịch vụ. App không có chức năng thanh toán trực tuyến.</string>
    <string name="GDC_txtTitle2">II. Miễn trừ trách nhiệm trong trường hợp phát sinh lỗi kỹ thuật của App Hair Salon:</string>
    <string name="GDCTitle2_content21">- Hair Salon cam kết hỗ nỗ lực đảm bảo App hoạt động an toàn, ổn định và liên tục. Tuy nhiên, trong trường hợp App phát sinh lỗi kỹ thuật như: lỗi phần mềm, lỗi hệ thống đường truyền Internet hoặc các lỗi khách quan khác dẫn đến Khách hàng không thể đặt lịch trên App, Khách hàng vui lòng thông báo ngay và kịp thời cho Hair Salon, Chúng tôi sẽ khắc phục lỗi trong thời gian sớm nhất.</string>
    <string name="GDCTitle2_content22">- Hair Salon không chiu trách nhiệm giải quyết các khiếu nại của khách hàng trong trường hợp App Hair Salon phát sinh lỗi kỹ thuật, lỗi phần mền, hệ thống đường truyền Internet hoặc các lỗi khác không do Hair Salon gây ra.</string>
    <string name="GDC_txtTitle3">1. Mục đích và phạm vi thu thập thông tin</string>
    <string name="GDCTitle3_content31">* Hair Salon thu thập thông tin của người dùng qua việc khách hàng đặt lịch cắt tóc , đặt mua hàng trên App Hair Salon .</string>
    <string name="GDCTitle3_content32">* Các thông tin của khách hàng mà hair salon thu thập gồm : Họ tên , số điện thoại , địa chỉ email.</string>
    <string name="GDCTitle3_content33">* Mục đích sử dụng thông tin:</string>
    <string name="GDCTitle3_content34">- Xác nhận danh tính khách hàng</string>
    <string name="GDCTitle3_content35">- Xác nhận lịch cắt tóc cho khách hàng</string>
    <string name="GDCTitle3_content36">- Xác định địa điểm của khách hàng</string>
    <string name="GDCTitle3_content37">- Nâng cao chất lượng dịch vụ chăm sóc khách hàng , liên lạc giải quyết vấn đề khi khách hàng có trải nghiệm chưa tốt.</string>
    <string name="GDC_txtTitle4">2. Phạm vi sử dụng thông tin và bảo mật thông tin</string>
    <string name="GDCTitle4_content41">* Thông tin các nhân thu thập được sẽ chỉ được sử dụng trong nội bộ công ty nhằm mục đích : xác nhận lịch cắt tóc cho khách hàng, chăm sóc khách hàng.</string>
    <string name="GDCTitle4_content42">* Hair Salon không cung cấp cho bất cứ bên thứ 3 nào các thông tin của khách hàng (trừ trường hợp được khách hàng đồng ý )</string>
    <string name="GDC_txtTitle5">3.Thông tin đơn vị thu thập và quản lý thông tin cá nhân khách hàng</string>
    <string name="GDCTitle5_content51">Công ty Cp thương mại dịch vụ Hair Salon Địa chỉ : số 82 Trần Đại Nghĩa , P.Đồng Tâm, Q. Hai Bà Trưng, Hà Nội Mã số Thuế : 0107467693</string>
    <string name="GDC_txtTitle6">4.Phương tiện và công cụ để người dùng tiếp cận và chỉnh sửa dữ liệu cá nhân của mình</string>
    <string name="GDCTitle6_content61">Khách hàng muốn chỉnh sửa thông tin cá nhân của mình vui lòng liên hệ SĐT công ty: 0888682346</string>
    <string name="Map_API_KEY">AIzaSyBF7EWL56sQb2-uSVyfqyKAlkfXuePsp90</string>
    <string name="msg_token_fmt"></string>
</resources>