<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activity.ActivityDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp">

        <ImageView
            android:id="@+id/img_back_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="12dp"
            android:src="@drawable/ic_vt_back_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:fontFamily="@font/bevietnampro_regular"
            android:text="@string/GDC_Title"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F1F1F1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="70dp"
                android:layout_marginTop="21dp"
                android:fontFamily="@font/robotomedium"
                android:text="@string/GDC_Title2"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/bevietnampro_semibold"
                android:text="@string/GDC_txtTitle1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle1_contentPart1"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle1_txtPart2"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle1_contentPart21"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle1_contentPart22"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle1_contentPart23"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle1_txtPart3"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle1_contentPart31"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle1_contentPart32"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle1_contentPart33"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle1_contentPart34"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle1_txtPart4"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle1_contentPart4.1"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/bevietnampro_semibold"
                android:text="@string/GDC_txtTitle2"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle2_content21"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/robotoregular"
                android:text="@string/GDCTitle2_content22"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/bevietnampro_semibold"
                android:text="@string/GDC_txtTitle3"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/GDCTitle3_content31"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/GDCTitle3_content32"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/GDCTitle3_content33"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/GDCTitle3_content34"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/GDCTitle3_content35"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/GDCTitle3_content36"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/GDCTitle3_content37"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/bevietnampro_semibold"
                android:text="@string/GDC_txtTitle4"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/GDCTitle4_content41"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/GDCTitle4_content42"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <!--            -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/bevietnampro_semibold"
                android:text="@string/GDC_txtTitle5"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/GDCTitle5_content51"
                android:textColor="@color/black"
                android:textSize="14sp" />
            <!--            -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/bevietnampro_semibold"
                android:text="@string/GDC_txtTitle6"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/GDCTitle6_content61"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>